@@ -7132,6 +7132,7 @@ sub parse_arguments ()
       $output_directory = '.';
     }
 
+  my $errspec = 0;
   foreach my $arg (@ARGV)
     {
       if ($arg =~ /^-./)
@@ -7151,9 +7152,12 @@ sub parse_arguments ()
 	}
       else
 	{
-	  error "no Automake input file found in `$arg'";
+	  error "no Automake input file found for `$arg'";
+	  $errspec = 1;
 	}
     }
+  fatal "no input file found among supplied arguments"
+    if $errspec && ! @input_files;
 }
 
 ################################################################
@@ -7169,8 +7173,13 @@ $configure_ac = require_configure_ac;
 # Do configure.ac scan only once.
 scan_autoconf_files;
 
-fatal "no `Makefile.am' found or specified\n"
-  if ! @input_files;
+if (! @input_files)
+  {
+    my $msg = '';
+    $msg = "\nDid you forget AC_CONFIG_FILES([Makefile]) in $configure_ac?"
+      if -f 'Makefile.am';
+    fatal ("no `Makefile.am' found for any configure output$msg");
+  }
 
 my $automake_has_run = 0;
 
