@@ -1,5 +1,6 @@
 #! /bin/sh
-# Copyright (C) 1997, 2000, 2001, 2002, 2003  Free Software Foundation, Inc.
+# Copyright (C) 1997, 2000, 2001, 2002, 2003, 2004  Free Software
+#   Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -34,4 +35,4 @@ END
 
 $ACLOCAL
 AUTOMAKE_fails
-grep 'found or specified' stderr
+grep 'AC_CONFIG_FILES(.Makefile.)' stderr
