@@ -1,3 +1,10 @@
+2004-05-15  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* automake.in (parse_arguments, MAIN): Give more precise
+	diagnostics when not input file is found.
+	* tests/output5.test: Adjust.
+	Suggested by Jens Petersen.
+
 2004-05-14  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* lib/am/libs.am (AR, ARFLAGS): Move these definition ...
